# game-temp

./: .gitignore  Cargo.toml  README.md
data/worlds/default_name_1/chunks/x0/: y0.chunk
src/: basic_config.rs  benchmark.rs  camera.rs  chunk_generator.rs  control.rs  egui_tools.rs  entity.rs  game_config.rs  item.rs  lib.rs  main.rs  physics.rs  player_shader.wgsl  realm.rs  shader.wgsl  texture.rs  voxel_collision.rs  voxel_collision_example.rs  wf_shader.wgsl
src/ui/: block_icon_shader.wgsl  block_render.rs  block_renderer.rs  inventory_renderer.rs  mod.rs  ui_instance_shader.wgsl  ui_text_renderer.rs
